# api/src/main/java/me/redshore/web_gagebu/feature/accountbook/dto/MemberUpdateCommand.java
@@ -1,0 +1,14 @@
+package me.redshore.web_gagebu.feature.accountbook.dto;
+
+import java.util.UUID;
+import lombok.Builder;
+import me.redshore.web_gagebu.feature.accountbook.domain.MemberRole;
+
+@Builder
+public record MemberUpdateCommand(
+    UUID accountBookId,
+    UUID memberId,
+    MemberRole role
+) {
+
+}
