# api/src/main/java/me/redshore/web_gagebu/feature/accountbook/dto/request/MemberUpdateRequest.java
@@ -1,0 +1,9 @@
+package me.redshore.web_gagebu.feature.accountbook.dto.request;
+
+import me.redshore.web_gagebu.feature.accountbook.domain.MemberRole;
+
+public record MemberUpdateRequest(
+    MemberRole role
+) {
+
+}
