# api/src/main/java/me/redshore/web_gagebu/feature/accountbook/dto/response/AccountBookView.java
@@ -4,6 +4,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.UUID;
+import org.springframework.lang.Nullable;
 
 public record AccountBookView(
     UUID id,
@@ -14,6 +15,7 @@ public record AccountBookView(
     List<MemberView> members,
     List<CategoryView> categories,
 
+    @Nullable UUID createdBy,
     ZonedDateTime createdAt,
     ZonedDateTime updatedAt
 ) {
